# yaks

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.yaks/: config.yaml
.yaks/hairy/: yak-5e6f.yaml
.yaks/shaving/: yak-d4f1.md  yaks-814c.yaml
.yaks/shorn/: yak-1ac4.md  yak-1ac4.yaml  yak-37fd.md  yak-37fd.yaml  yak-4a23.md  yak-4a23.yaml  yak-4b9d.md  yak-5e6f.md  yak-5e6f.yaml  yak-9711.md  yak-9711.yaml  yak-b2e7.yaml  yak-c0d3.md  yak-c0d3.yaml  yak-cb51.md  yak-cb51.yaml  yak-d4f1.md  yaks-814c.md  yaks-814c.yaml
commands/: blocked.md  close.md  create.md  dep.md  import-beads.md  init.md  list.md  next.md  ready.md  regrow.md  reopen.md  reparent.md  search.md  shave.md  shorn.md  show.md  stats.md  tangled.md  update.md  work.md
scripts/: yak.py
skills/yak/: SKILL.md
