[project]
name = "yaks"
version = "0.1.0"
description = "Filesystem-native task tracker"
requires-python = ">=3.10"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
